# models/user.js
@@ -4,13 +4,20 @@ const passportLocalMongoose = require('passport-local-mongoose');
 const findOrCreate = require('mongoose-findorcreate');
 
 var Basket = new Schema({
-    color:{
+    _id: {
+        type: mongoose.Schema.Types.ObjectId
+    },
+    product_id:{
+        type: mongoose.Schema.Types.ObjectId,
+        ref:'Product'
+    },
+    selected_color:{
         type: String
     },
-    size:{
+    selected_size:{
         type: String
     },
-    count:{
+    selected_count:{
         type: Number
     }
 })
@@ -19,11 +26,11 @@ var userschema = new Schema({
     googleId: String,
     username: String,
     image: String,
-    basket: [{
+    basket: [Basket],
+    pawmark: [{
         type: mongoose.Schema.Types.ObjectId,
-        ref:'Basket'
+        ref:'Product'
     }],
-    jjim: [String],
 })
 userschema.plugin(passportLocalMongoose);
 userschema.plugin(findOrCreate);
